--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aws-sdk": "^2.1054.0",
     "cors": "^2.8.5",
     "express": "^4.17.2",
-    "express-fileupload": "^1.2.1"
+    "express-fileupload": "^1.2.1",
+    "ws": "^8.4.2"
   }
 }
