--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "express-fileupload": "^1.2.1",
+    "log4js": "^6.3.0",
     "ws": "^8.4.2"
   }
 }
