--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.47.0",
     "aws-sdk": "^2.1054.0",
     "cors": "^2.8.5",
     "express": "^4.17.2",
